--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>HomePage</title>
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
     <div class="first-div">
